--- a/index.html
+++ b/index.html
@@ -81,9 +81,30 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="creative-section">
+        <div class="creative-sec-width">
+            <img src="my-bg2.png" alt="">
+        </div>
+        <div id="bottom-right-mg" class="creative-sec-width">
+            <h3>About <span>My Self</span></h3>
+            <p class="text-font-p">Hello,every one my name is Rahin Ahmed.I from Bangladesh.I am student right now i am
+                completing my
+                Becholre Degree and also learning the webdevloping because it is dream . I am honest person and senciere
+                man also hardworking person. I am never fell lazy and bore on my work.My hobby is travel the world and
+                if you want to know more about see in below site.
+            </p>
+            <a class="button" href="">Know Me</a>
+            <h5>NAME:Rahin Ahmed.</h5>
+            <h5>AGE:21</h5>
+            <h5>ADDRES:Halishohar,chittagonng Bangladesh</h5>
+            <h5>CONTACT:01741277355</h5>
+            <h5>EMAIL:rahinahmed@gmailc.com</h5>
+            <a class="button" href="">Contact ME</a>
+        </div>
+    </section>
     <footer>
-        <h4>Mission 2022</h4>
-        <p>Hardwork,Pereservance and Detemined for 2022</p>
+        <h5>Mission <span>2022</span></h5>
+        <p>Hardwork,Persevarance,and Determined for 2022</p>
     </footer>
 </body>
 
